@@ -1,6 +1,13 @@
 v3.8.5 (XXXX-XX-XX)
 -------------------
 
+* Added startup security option `--foxx.allow-install-from-remote` to allow 
+  installing Foxx apps from remote URLs other than Github. The option is turned 
+  on by default to ensure backwards compatibility with previous version, but
+  can be turned off to disallow installation of Foxx apps from arbitrary
+  sources. Starting with ArangoDB 3.9, the default value for the option will
+  flip from `true` to `false`.
+
 * Added startup options to adjust previously hard-coded parameters for the
   RocksDB throttle:
   - `--rocksdb.throttle-frequency`: frequency for write-throttle calculations
